Refactor code structure and remove unused methods
The codebase has been refactored extensively. Key actions included adding new classes related to data modeling, simulation, and configuration. Additionally, several old and used methods have been removed, contributing to cleaner code structure. This change allows better maintainability and readability, and opens up possibilities for more granular development and testing. All removed pathways were either unused or have already been replaced in the new structure.